feat(battle): battle新增turnCount
fix(analyzer): 修复部分空指针问题

fix(analyzer): 修复再生力+逃脱按钮导致lastMoveTurn为0

fix(analyzer): 来自自身的伤害统计不准确

test(analyzer): 调整用例

chore: clean code删除无用代码